Issue #609: Fix white space in iPad

--- a/app/styles/pages/specific/_specific-upload-queue-view.scss
+++ b/app/styles/pages/specific/_specific-upload-queue-view.scss
@@ -513,7 +513,7 @@
   .upload-files {
     #breadcrumb-wrap {
       position: fixed;
-      top: 107px;
+      top: 50px;
       z-index: 6;
     }
     #drop-area {
